major fixes